<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="Amount">Amount $</string>
    <string name="Tip">Tip</string>
    <string name="Split_by">Split by</string>
    <string name="recommended_tip">Recommended Tip</string>
    <string name="to_pay">To pay:</string>
    <string name="total">Total</string>

</resources>
