<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background"
    tools:context="${packageName}.${activityClass}"  >
    
    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#fff" />

    <Button
        android:id="@+id/bv10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_marginRight="30dp"
        android:layout_marginTop="56dp"
        android:layout_toLeftOf="@+id/bv15"
        android:onClick="tip10"
        android:textColor="#fff"
        android:text="10%" />

    <Button
        android:id="@+id/bv20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bv15"
        android:layout_alignBottom="@+id/bv15"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/bv15"
        android:onClick="tip20"
        android:textColor="#fff"
        android:text="20%" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:textColor="#fff"
        android:width="100dp" />

    <Button
        android:id="@+id/bv15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bv10"
        android:layout_alignBottom="@+id/bv10"
        android:layout_centerHorizontal="true"
        android:onClick="tip15"
        android:textColor="#fff"
        android:text="15%" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etAmount"
        android:layout_alignBottom="@+id/etAmount"
        android:layout_alignRight="@+id/bv10"
        android:text="@string/Amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/total"
        android:textColor="#000" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/tvToPay"
        android:text="$0.00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTotal"
        android:layout_alignRight="@+id/textView10"
        android:layout_marginBottom="16dp"
        android:text="@string/recommended_tip"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToPay"
        android:layout_alignBottom="@+id/tvToPay"
        android:layout_alignRight="@+id/textView5"
        android:text="@string/to_pay"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignTop="@+id/view1"
        android:layout_marginTop="20dp"
        android:text="Tip" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/tvTotal"
        android:text="$0.00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTip"
        android:layout_toRightOf="@+id/textView5"
        android:text="_______________"
        android:textColor="#000" />

    <TextView
        android:id="@+id/tvPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/etAmount"
        android:text="10%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPercent"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/bv15"
        android:text="$0.00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <EditText
        android:id="@+id/etSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_below="@+id/etAmount"
        android:ems="10"
        android:text="1"
        android:textColor="#fff"
        android:width="50dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etSplit"
        android:layout_alignBottom="@+id/etSplit"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/Split_by"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <SeekBar
        android:id="@+id/sbTip"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bv10"
        android:layout_centerHorizontal="true"
        android:max="50" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/sbTip"
        android:text="0%"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sbTip"
        android:layout_toRightOf="@+id/bv20"
        android:text="50%"
        android:textColor="#fff" />

</RelativeLayout>
